--- a/index.html
+++ b/index.html
@@ -17,13 +17,72 @@ scale=1.0">
 class="container imagem">
 
 <h1 class="container titulo">
-Biblioteca Start
+BOLO
 </h1>
-<p class="container frase">
-"Aqui cada livro é um <i>start</i> para o seu
-
-conhecimento!"</p>
-</div>
+<p class="container frase">    bolinho <i> receita </i> 
+</h2 <i> para seu conheimento </i>          </p>
+</div> RECEITA DE BOLO DE CENOURA
 </header>
-</body>
+</body> 
+Massa
+óleo
+1/2 xícara (chá) de óleo
+cenoura
+3 cenouras médias raladas
+ovo
+4 ovos
+açúcar
+2 xícaras (chá) de açúcar
+farinha de trigo
+2 e 1/2 xícaras (chá) de farinha de trigo
+fermento em pó químico
+1 colher (sopa) de fermento em pó
+Cobertura
+manteiga
+1 colher (sopa) de manteiga
+chocolate em pó
+3 colheres (sopa) de chocolate em pó
+açúcar
+1 xícara (chá) de açúcar
+leite
+1 xícara (chá) de leite
+Utensílios
+Batedeira
+Batedeira
+Comprar
+Liquidificador
+Liquidificador
+Comprar
+Formo de bolo
+Formo de bolo
+Comprar
+Prato de sobremesa
+Prato de sobremesa
+Comprar
+Ao clicar em comprar você será redirecionado para o site da Amazon.com.br
+
+Modo de preparo
+Modo de preparo : 40min
+1
+Massa
+Em um liquidificador, adicione a cenoura, os ovos e o óleo, depois misture.
+
+2
+Acrescente o açúcar e bata novamente por 5 minutos.
+
+3
+Em uma tigela ou na batedeira, adicione a farinha de trigo e depois misture novamente.
+
+4
+Acrescente o fermento e misture lentamente com uma colher.
+
+5
+Asse em um forno preaquecido a 180° C por aproximadamente 40 minutos.
+
+6
+Cobertura
+Despeje em uma tigela a manteiga, o chocolate em pó, o açúcar e o leite, depois misture.
+
+7
+Leve a mistura ao fogo e continue misturando até obter uma consistência cremosa, depois despeje a calda por cima do bolo.
 </html>
