--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ class="container imagem">
 <h1 class="container titulo">
 BOLO
 </h1>
-<p class="container frase">    bolinho <i> receita </i> 
-</h2 <i> para seu conheimento </i>          </p>
+<p class="container frase">     <i>  </i> 
+</h2 <i>  </i>          </p>
 </div> RECEITA DE BOLO DE CENOURA
 </header>
 </body> 
-Massa
+Massa 
 óleo
 1/2 xícara (chá) de óleo
 cenoura
