--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ scale=1.0">
 <body>
 <header class="cabecalho">
 <div class="container">
-<img src="IMG/Logo.svg" alt="logotipo"
+<img src="img/bolo" alt="logotipo"
 
 class="container imagem">
 
 <h1 class="container titulo">
-BOLO
+
 </h1>
 <p class="container frase">     <i>  </i> 
 </h2 <i>  </i>          </p>
